Change of Logic in CursorController